crates/plotnik-tests/tests/04-emit/bytecode/sequences/dart_bracket_order.txt
Q = (list_literal
  "]"
  "["
)
------------------ INPUT (dart) ------------------
------------------ DIAGNOSTICS -------------------
error: the grammar places `"["` before `"]"` in `list_literal`
 --> query.ptk:2:3
  |
1 | Q = (list_literal
  |      ------------ inside `list_literal`
2 |   "]"
  |   ^^^
3 |   "["
  |   --- `"["` must come before `"]"`
  |
help: write `"["` before `"]"`
